cmake_minimum_required(VERSION 3.10)
project(cpp_ros_su26)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(example example.cpp)
add_executable(print print.cpp)
add_executable(variables variables.cpp)
add_executable(functions functions.cpp)
add_executable(namespaces namespaces.cpp)
add_executable(conditional_compile conditional_compile.cpp)
add_executable(headers headers.cpp)
add_executable(datatypes datatypes.cpp)
add_executable(string string.cpp)
add_executable(operators operators.cpp)
add_executable(constexpr constexpr.cpp)
add_executable(scopes scopes.cpp)
add_executable(linkage linkage.cpp linkageCopy.cpp inline.cpp)
add_executable(constants constants.cpp constants.h inline.cpp) 